@@ -181,8 +181,8 @@ $LOCAL_LANG = Array (
 		'v_registration_created_message2' => 'Your e-mail address <b>%4$s</b> has been added to our list of members.',
 		'v_registration_created_message2_informal' => 'Your e-mail address <b>%4$s</b> has been added to our list of members.',
 		'v_registration_created' => '%3$s created a new membership with %1$s.',
-		'v_registration_updated_subject' => 'Your profile with <b>%1$s</b> has been updated.',
-		'v_registration_updated_subject_informal' => 'Your profile with <b>%1$s</b> has been updated.',
+		'v_registration_updated_subject' => 'Your membership details with <b>%1$s</b> have been updated.',
+		'v_registration_updated_subject_informal' => 'Your membership details with <b>%1$s</b> have been updated.',
 		'v_registration_updated_message1' => 'Thank your for keeping your profile up-to-date.',
 		'v_registration_updated_message1_informal' => 'Thank your for keeping your profile up-to-date.',
 		'v_registration_updated' => '%3$s updated his(her) profile with %1$s.',
@@ -204,10 +204,10 @@ $LOCAL_LANG = Array (
 		'v_registration_initiated_message3' => 'Please feel free to ask us any questions, or  tell us anything about the registration process, or make any other constructive comments by sending an e-mail to:',
 		'v_registration_initiated_message3_informal' => 'Please feel free to ask us any questions, or  tell us anything about the registration process, or make any other constructive comments by sending an e-mail to:',
 		'v_registration_initiated' => '%3$s initiated his(her) registration in %1$s.',
-		'v_registration_review_subject' => 'Please rewiew the application of <b>%3$s</b> for membership of <b>%1$s</b>.',
-		'v_registration_review_message1' => 'If you think that the application for membership of <b>%3$s</b> should be accepted, please click on this link to accept:',
-		'v_registration_review_message2' => 'If you think that the application for membership of <b>%3$s</b> should be refused, please click on this link to refuse:',
-		'v_registration_review_message3' => 'Please review the application of <b>%3$s</b> for membership of <b>%1$s</b>. The following data was entered on the registration form:',
+		'v_registration_review_subject' => 'Please rewiew the application of <b>%3$s</b> for membership with <b>%1$s</b>.',
+		'v_registration_review_message1' => 'If you think that the application for membership with <b>%3$s</b> should be accepted, please click on this link to accept:',
+		'v_registration_review_message2' => 'If you think that the application for membership with <b>%3$s</b> should be refused, please click on this link to refuse:',
+		'v_registration_review_message3' => 'Please review the application of <b>%3$s</b> for membership with <b>%1$s</b>. The following data was entered on the registration form:',
 		'v_registration_invited_subject' => 'Invitation to register with: <b>%1$s</b>.',
 		'v_registration_invited_subject_informal' => 'Invitation to register with: <b>%1$s</b>.',
 		'v_registration_invited_message1' => 'We thought you might be interested in registering with: <b>%1$s</b><br /><br />
