@@ -1988,7 +1988,7 @@ The user is informed that a message has been sent to the email address and that 
 <h4>###LABEL_V_DEAR###</h4>
 <p>###LABEL_V_REGISTRATION_UPDATED_SUBJECT###</p>
 <p>###LABEL_V_REGISTRATION_UPDATED_MESSAGE1###</p>
-<p>###LABEL_KIND_REGARDS###</p>
+<p>###LABEL_KIND_REGARDS_UPD###</p>
 <h4>###SITE_NAME###</h4>
 <p><a href="###SITE_URL###">###SITE_WWW###</a><br />
 <a href="mailto:###SITE_EMAIL###">###SITE_EMAIL###</a></p>
@@ -2009,7 +2009,7 @@ The user is informed that a message has been sent to the email address and that 
 ###LABEL_V_REGISTRATION_UPDATED_SUBJECT###
 ###LABEL_V_REGISTRATION_UPDATED_MESSAGE1###
 
-###LABEL_KIND_REGARDS###
+###LABEL_KIND_REGARDS_UPD###
 ###SITE_NAME###
 ###SITE_URL###
 ###SITE_EMAIL###
@@ -2109,7 +2109,7 @@ The user is informed that a message has been sent to the email address and that 
 ###LABEL_EMAIL### ###FIELD_email###
 ###LABEL_USERNAME### ###FIELD_username###
 
-###LABEL_KIND_REGARDS_INI###
+###LABEL_KIND_REGARDS###
 ###SITE_NAME###
 <!-- ###SUB_RECORD### -->
 <!-- ###EMAIL_TEMPLATE_SETFIXED_CREATE_ADMIN### end-->
@@ -2188,7 +2188,7 @@ The user is informed that a message has been sent to the email address and that 
 ###LABEL_EMAIL### ###FIELD_email###
 ###LABEL_USERNAME### ###FIELD_username###
 
-###LABEL_KIND_REGARDS_INV###
+###LABEL_KIND_REGARDS###
 ###SITE_NAME###
 <!-- ###SUB_RECORD### -->
 <!-- ###EMAIL_TEMPLATE_SETFIXED_INVITE_ADMIN### end-->
@@ -2257,7 +2257,7 @@ The user is informed that a message has been sent to the email address and that 
 ###LABEL_EMAIL### ###FIELD_email###
 ###LABEL_USERNAME### ###FIELD_username###
 
-###LABEL_KIND_REGARDS_CRE###
+###LABEL_KIND_REGARDS###
 ###SITE_NAME###
 <!-- ###SUB_RECORD### -->
 <!-- ###EMAIL_TEMPLATE_SETFIXED_APPROVE_ADMIN### end-->
@@ -2325,7 +2325,7 @@ The user is informed that a message has been sent to the email address and that 
 ###LABEL_EMAIL### ###FIELD_email###
 ###LABEL_USERNAME### ###FIELD_username###
 
-###LABEL_KIND_REGARDS_DEL###
+###LABEL_KIND_REGARDS###
 ###SITE_NAME###
 <!-- ###SUB_RECORD### -->
 <!-- ###EMAIL_TEMPLATE_SETFIXED_DELETE_ADMIN### end-->
@@ -2394,7 +2394,7 @@ The user is informed that a message has been sent to the email address and that 
 ###LABEL_EMAIL### ###FIELD_email###
 ###LABEL_USERNAME### ###FIELD_username###
 
-###LABEL_KIND_REGARDS_DEL###
+###LABEL_KIND_REGARDS###
 ###SITE_NAME###
 <!-- ###SUB_RECORD### -->
 <!-- ###EMAIL_TEMPLATE_DELETE_SAVED_ADMIN### end-->
